<resources>
    <string name="app_name">PetaniKita</string>
    <string name="splash_title">Petani\nKita</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_scan">Scan</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="login">Masuk</string>
    <string name="loginDesc">Masukan email dan password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="tidak_punya_akun">Tidak punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="name">Name</string>
    <string name="register">Buat Akun</string>
    <string name="registerDesc">Masukan data untuk membuat akun</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="logout">logout</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="profil">Profil</string>
    <string name="cart">Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_title">Product Title</string>
    <string name="product_price">Product Price</string>
    <string name="product_image">Product Image</string>
    <string name="product_created">Product Created At</string>
    <string name="product_description">Product Description</string>
    <string name="product_stock">Stok</string>
    <string name="logo_created">Logo Created</string>
    <string name="logo_description">Logo Description</string>
    <string name="seller">Seller</string>
    <string name="deteksi_tanaman">Deteksi Tanaman</string>
    <string name="jenis_tanaman">Jenis Tanaman</string>
    <string name="content_description_of_jenis_tanaman">Gambar dari jenis tanaman</string>
    <string name="back_button">Back Button</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="ambil_gambar_untuk_deteksi">Ambil Gambar untuk Deteksi</string>
    <string name="open_folder">Open Folder</string>
    <string name="open_camera">Open Camera</string>
    <string name="choose_image">Ambil gambar melalui kamera atau pilih dari galeri</string>
    <string name="disease">Disease</string>
    <string name="textview_prob">Prob%</string>
    <integer-array name="images_jenis_tanaman">
        <item>@drawable/padi</item>
        <item>@drawable/jagung</item>
        <item>@drawable/tomat</item>
        <item>@drawable/kentang</item>
    </integer-array>
</resources>