<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/blank"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/bg_button"
            android:contentDescription="@string/hello_blank_fragment"
            android:padding="10dp"
            android:clickable="false"
            android:alpha="0"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/profil"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/logout_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_baseline_logout_24"
            android:contentDescription="@string/logout"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/baseline_person_24"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/image_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textColor="@color/dark_blue_bg"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/image_profile"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <TextView
        android:id="@+id/profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/phone_number"
        android:textColor="@color/dark_blue_bg"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/image_profile"
        app:layout_constraintTop_toBottomOf="@+id/profile_email" />


    <ProgressBar
        android:id="@+id/progress_circular"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="342dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>