<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detection.chooseimage.ChooseImageFragment">

    <FrameLayout
        android:id="@+id/choose_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_gray_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_detection">


        <ImageView
            android:id="@+id/detection_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:srcCompat="@android:drawable/ic_menu_mapmode" />

        <TextView
            android:id="@+id/tv_detection_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choose_image"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/bottom_navigation_detection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/open_gallery"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/open_folder"
            app:srcCompat="@drawable/baseline_folder_open_24" />

        <ImageView
            android:id="@+id/open_camera"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:contentDescription="@string/open_camera"
            app:srcCompat="@drawable/baseline_camera_alt_24" />

        <ImageView
            android:id="@+id/button_start_detection"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:visibility="invisible"
            android:contentDescription="@string/deteksi_tanaman"
            app:srcCompat="@drawable/baseline_check_24" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>