<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/btnTambahkan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_detail_product_photo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@+id/scrollView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    app:cardCornerRadius="5dp"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical"
                        android:padding="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingEnd="10dp">

                            <TextView
                                android:id="@+id/tv_detail_product_title"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="start"
                                android:text="@string/product_title"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="normal" />

                            <TextView
                                android:id="@+id/tv_detail_product_stock"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:gravity="start"
                                android:text="@string/product_stock"
                                android:textColor="@color/black"
                                android:textSize="17sp" />

                        </LinearLayout>


                        <TextView
                            android:id="@+id/tv_detail_product_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/product_price"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/created_logo"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:contentDescription="@string/logo_created"
                                android:src="@drawable/baseline_access_time_24" />

                            <TextView
                                android:id="@+id/tv_detail_product_created"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/product_created"
                                android:textColor="@color/black"
                                android:textSize="17sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/description_logo"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:contentDescription="@string/logo_description"
                                android:src="@drawable/baseline_description_24" />

                            <TextView
                                android:id="@+id/tv_detail_product_description"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/product_description"
                                android:textColor="@color/black"
                                android:textSize="17sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/avatar_seller"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:contentDescription="@string/logo_description"
                                android:src="@drawable/baseline_person_24" />

                            <TextView
                                android:id="@+id/tv_detail_product_seller"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/seller"
                                android:textColor="@color/black"
                                android:textSize="17sp" />

                        </LinearLayout>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>


        </ScrollView>



    </FrameLayout>



    <Button
        android:id="@+id/btnTambahkan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/green_bg"
        android:padding="10dp"
        android:text="Tambah ke Keranjang"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>